--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.22",
     "gatsby": "^2.17.4",
+    "gatsby-cli": "^2.12.107",
     "gatsby-image": "^2.2.29",
     "gatsby-plugin-google-analytics": "^2.0.13",
     "gatsby-plugin-layout": "^1.0.11",
@@ -26,7 +27,7 @@
     "lodash": "^4.17.19",
     "prop-types": "^15.7.2",
     "querystringify": "^2.0.0",
-    "react": "^16.11.0",
+    "react": "^16.13.1",
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
     "set-value": "^2.0.1",
