--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-SHOP_NAME=graphql
-SHOPIFY_ACCESS_TOKEN=dd4d4dc146542ba7763305d71d1b3d38
+SHOP_NAME=deadwork-co
+SHOPIFY_ACCESS_TOKEN=871b13e5604ac0c2cdbbde814828060c
