--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
+    "react-icons": "^3.11.0",
     "set-value": "^2.0.1",
     "shopify-buy": "^2.8.0"
   },
